[package]
name = "task-queue"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]

[dependencies]
chrono = "0.4"
rusqlite = { version = "0.13", features = ["chrono"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"

[[bin]]
name = "tq"
path = "src/bin/main.rs"
