[package]
name = "task-queue"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
dirs = "3.0"
rayon = "1.3"
rusqlite = { version = "0.23", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[[bin]]
name = "tq"
path = "src/bin/main.rs"
